CHATS_SIT/force-app/main/default/objects/T_PRNT_DTL__x.object
<CustomObject>
    <description>Printed Correspondence</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>batchsit$t_prnt_dtl</externalName>
    <fields>
        <fullName>CR107_Checklist__c</fullName>
        <label>CR107_Checklist</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CR107_OTHER_TEXT__c</fullName>
        <label>CR107_OTHER_TEXT</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CR702_Checklist__c</fullName>
        <label>CR702_Checklist</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CR702_TEXT__c</fullName>
        <label>CR702_TEXT</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IDN_ADJMT__c</fullName>
        <label>Adjustment ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDN_AGRMT_FISCAL__c</fullName>
        <label>Fiscal Agreement ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDN_AUTH__c</fullName>
        <label>Authorization ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDN_CLIENT__c</fullName>
        <label>Client ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDN_PMT__c</fullName>
        <label>Payment ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSN_CODE__c</fullName>
        <description>Reason Code</description>
        <label>Reason Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <externalDeveloperName>requested_by</externalDeveloperName>
        <label>Requested By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_corr_status__c</fullName>
        <description>cde_corr_status</description>
        <externalDeveloperName>cde_corr_status</externalDeveloperName>
        <label>Status</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_lang_doc__c</fullName>
        <description>cde_lang_doc</description>
        <externalDeveloperName>cde_lang_doc</externalDeveloperName>
        <label>Language</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_method_print__c</fullName>
        <description>cde_method_print</description>
        <externalDeveloperName>cde_method_print</externalDeveloperName>
        <label>Print Method</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_type_rcpt__c</fullName>
        <description>cde_type_rcpt</description>
        <externalDeveloperName>cde_type_rcpt</externalDeveloperName>
        <label>Recipient Type</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>createdbyid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>createdbyid</description>
        <externalDeveloperName>createdbyid</externalDeveloperName>
        <label>CreatedbyID</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Printed_Correspondence</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>createddate__c</fullName>
        <description>createddate</description>
        <externalDeveloperName>createddate</externalDeveloperName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_prntd__c</fullName>
        <description>dte_prntd</description>
        <externalDeveloperName>dte_prntd</externalDeveloperName>
        <label>Date Printed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_reqstd__c</fullName>
        <description>dte_reqstd</description>
        <externalDeveloperName>dte_reqstd</externalDeveloperName>
        <label>Date Requested</label>
        <type>Date</type>
    </fields>
    
    <fields>
        <fullName>idn_case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>idn_case</description>
        <externalDeveloperName>idn_case</externalDeveloperName>
        <label>Case ID</label>
        <referenceTo>T_SBSD_CASE__c</referenceTo>
        <relationshipLabel>Printed Correspondence</relationshipLabel>
        <relationshipName>batchsit_t_prnt_dtl</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>idn_corr_nam__c</fullName>
        <description>idn_corr_nam</description>
        <externalDeveloperName>idn_corr_nam</externalDeveloperName>
        <label>Correspondence ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>idn_county__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>idn_county</description>
        <externalDeveloperName>idn_county</externalDeveloperName>
        <label>County</label>
        <referenceTo>T_COUNTY__c</referenceTo>
        <relationshipLabel>Printed Correspondence</relationshipLabel>
        <relationshipName>batchsit_t_prnt_dtl</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>idn_prnt_dtl__c</fullName>
        <description>idn_prnt_dtl</description>
        <externalDeveloperName>idn_prnt_dtl</externalDeveloperName>
        <label>Identifier Print Detail</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_provr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>idn_provr</description>
        <externalDeveloperName>idn_provr</externalDeveloperName>
        <label>Provider ID</label>
        <referenceTo>T_CHATS_PROVR_STATUS__c</referenceTo>
        <relationshipLabel>Printed Correspondence</relationshipLabel>
        <relationshipName>Printed_Correspondence</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>idn_user_reqstd__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>idn_user_reqstd</description>
        <externalDeveloperName>idn_user_reqstd</externalDeveloperName>
        <label>User Requested</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchsit_t_prnt_dtl2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lastmodifiedbyid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lastmodifiedbyid</description>
        <externalDeveloperName>lastmodifiedbyid</externalDeveloperName>
        <label>LastModifiedById</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchsit_t_prnt_dtl1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lastmodifieddate__c</fullName>
        <description>lastmodifieddate</description>
        <externalDeveloperName>lastmodifieddate</externalDeveloperName>
        <label>Last modified date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>nam_corr__c</fullName>
        <description>nam_corr</description>
        <externalDeveloperName>nam_corr</externalDeveloperName>
        <label>Correspondense Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Printed Correspondence</label>
    <listViews>
        <fullName>All</fullName>
        <columns>idn_case__c</columns>
        <columns>idn_provr__c</columns>
        <columns>idn_corr_nam__c</columns>
        <columns>cde_corr_status__c</columns>
        <columns>nam_corr__c</columns>
        <columns>idn_county__c</columns>
        <columns>dte_reqstd__c</columns>
        <columns>createddate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Printed Correspondence</pluralLabel>
</CustomObject>