CHATS_SIT/force-app/main/default/objects/T_PRNT_DTL__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>idn_case__c</columns>
    <columns>idn_provr__c</columns>
    <columns>idn_corr_nam__c</columns>
    <columns>cde_corr_status__c</columns>
    <columns>nam_corr__c</columns>
    <columns>idn_county__c</columns>
    <columns>dte_reqstd__c</columns>
    <columns>createddate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>